<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tanya.radio_button.MainActivity"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_comp_sc"
            android:text="@string/comp_sc"
            android:onClick="selectcourse"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_phy_hons"
            android:text="@string/phy_hons"
            android:onClick="selectcourse"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_eng_hons"
            android:text="@string/eng_hons"
            android:onClick="selectcourse"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_economics_hons"
            android:text="@string/economics_hons"
            android:onClick="selectcourse"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teacher Incharge"
            android:height="20dp"
            android:width="500dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:id="@+id/result_text" />


    </RadioGroup>

</LinearLayout>
